--- a/peerassessment/app/templates/index.html
+++ b/peerassessment/app/templates/index.html
@@ -1,2 +1,61 @@
-Hello {{complement}}</br>
-Student Count: {{student_count}}
+{% load static %}
+<!DOCTYPE html>
+<html>
+
+<head>
+
+  <meta charset="UTF-8">
+
+  <title>Login - Peer Assessment</title>
+
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" media="screen" type="text/css" />
+
+</head>
+
+<body>
+
+  <html lang="en-US">
+<head>
+
+	<meta charset="utf-8">
+
+	<title>Login</title>
+
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700">
+
+	<!--[if lt IE 9]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
+</head>
+
+<body>
+
+    <div id="login">
+        
+        <h1 class="titlelogin"> Peer Assessment <h1> <br> 
+
+        <form action="javascript:void(0);" method="get">
+
+            <fieldset class="clearfix">
+        
+                <p><span class="fontawesome-user"></span><input type="text" value="Email" onBlur="if(this.value == '') this.value = 'Email'" onFocus="if(this.value == 'Email') this.value = ''" required></p> <!-- JS because of IE support; better: placeholder="Email" -->
+                <p><span class="fontawesome-lock"></span><input type="password"  value="Password" onBlur="if(this.value == '') this.value = 'Password'" onFocus="if(this.value == 'Password') this.value = ''" required></p> <!-- JS because of IE support; better: placeholder="Password" -->
+                <p><input type="submit" value="Log In"></p>
+
+            </fieldset>
+
+        </form>
+
+        <p>Não tem cadastro? <a href="#"> Registre-se </a><span class="fontawesome-arrow-right"></span></p>
+
+    </div> <!-- end login -->
+
+</body>
+</html>
+
+  <script src='http://codepen.io/assets/libs/fullpage/none.js'></script>
+
+</body>
+
+</html>
