--- a/peerassessment/app/static/css/index-style.css
+++ b/peerassessment/app/static/css/index-style.css
@@ -4,8 +4,12 @@ padding-bottom: 40px;
 background-color: #323d54;
 }
 
-.textview {
+.top-padding {
+  margin-top: 20px;
+}
 
+bottom-padding {
+  margin-bottom: 20px;
 }
 
 body {
@@ -18,20 +22,20 @@ body {
 
   max-width: 330px;
   padding: 15px;
-
   margin: 0 auto;
 }
+
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
   text-align: center;
   color: #e5e5e5;
-
 }
-.form-signin .checkbox {
 
+.form-signin .checkbox {
   font-weight: normal;
 }
+
 .form-signin .form-control {
   position: relative;
   height: auto;
