--- a/peerassessment/app/templates/base.html
+++ b/peerassessment/app/templates/base.html
@@ -22,16 +22,12 @@
 			<div class="top-nav">
 				<ul class="nav-left list-unstyled">
 
-
-
 				</ul>
-
-
 
 				<ul class="nav-right pull-right list-unstyled">
 
 					<li class="dropdown">
-	                <a> {{ user }}</a>
+	                <a> {{ user.first_name }} {{ user.last_name }}</a>
 	            	</li>
 					<!--  -->
 					<li id="notification" class="dropdown">
