Issue #20 - Implement student dashboard page
Added common information for listing assignments to a single page.
Added student dashboard page.

--- a/peerassessment/app/templates/student/index.html
+++ b/peerassessment/app/templates/student/index.html
@@ -1,7 +1,3 @@
-{% extends "base.html" %}
+{% extends "common/list-assignments.html" %}
 
-{% block title %}{{ section.title }}{% endblock %}
-
-{% block main_container %}
-<h1>Hello World!</h1>
-{% endblock %}
+{% block title %}Student Dashboard{% endblock %}
