--- a/peerassessment/app/static/css/list-assignments-style.css
+++ b/peerassessment/app/static/css/list-assignments-style.css
@@ -30,12 +30,21 @@
     font-size: 50px; !important
 }
 
-.round-icon {
+.assignment-round-icon {
     width: 70px;
     height: 70px;
     margin: 20px 15px;
     padding: 0;
     line-height: 0px;
+    border-radius: 50%;
+    display: block;
+    text-align: center;
+}
+
+.assignment-icon-fa {
+    line-height: 1.4;
+    color: #ffffff;
+    width: 100%;
 }
 
 .submission-color {
@@ -52,13 +61,6 @@
 
 .closed-color {
     background-color: #616161;
-}
-
-
-.fa {
-    line-height: 1.4;
-    color: #ffffff;
-    width: 100%;
 }
 
 .discipline-button {
