--- a/peerassessment/app/templates/base.html
+++ b/peerassessment/app/templates/base.html
@@ -31,7 +31,7 @@
 	            	</li>
 					<!--  -->
 					<li id="notification" class="dropdown">
-		                <a onclick='showNotification();' class="bg-bell">
+		                <a onclick='showNotification();' href="javascript:;" class="bg-bell">
 		                	<i class="fa fa-bell-o"></i>
 		                	<span class="badge badge-info">{{ notifications_count }}</span>
 		                </a>
@@ -70,10 +70,33 @@
 		                </a>
 	            	</li>
 
-	            	<li class="dropdown">
-		                <a class="bg-settings">
+	            	<li id="settings" class="dropdown">
+		                <a onclick="showSettings();" href="javascript:;" class="bg-settings">
 		                	<i class="fa fa-cogs"></i>
 		                </a>
+
+                        <div class="dropdown-menu pull-right with-arrow panel panel-default">
+                            <div class="panel-heading">
+                                Settings
+                            </div>
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <a onclick="logout();" href="javascript:;" class="media">
+                                        <span class="pull-left media-icon">
+                                        <span class="round-icon sm bg-success"><i class="fa fa-sign-out"></i></span>
+                                        </span>
+                                        <div class="media-body">
+                                            <span class="block">Logout</span>
+
+                                        </div>
+                                    </a>
+                                </li>
+
+                            </ul>
+                            <!-- <div class="panel-footer">
+                                <a href="javascript:;">Show all notifications.</a>
+                            </div> -->
+                        </div>
 	            	</li>
 				</ul>
 			</div>
