Issue #22 - Implement create assignment page
Implemented create assignment page. Missing data validation.

--- a/peerassessment/app/templates/base.html
+++ b/peerassessment/app/templates/base.html
@@ -18,7 +18,7 @@
 
 	<section id="heading">
 		<header class="top-header clearfix">
-			<div class="logo"> Peer Assessment </div>
+			<div class="logo"> <a href="/"> Peer Assessment </a> </div>
 			<div class="top-nav">
 				<ul class="nav-left list-unstyled">
 
@@ -113,6 +113,7 @@
 	</section>
 	<!-- Scripts -->
 	<script src="{% static 'js/jquery-1.11.1.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'js/base.js' %}"></script>
 	{% block scripts %}{% endblock %}
 </body>
