--- a/peerassessment/app/templates/professor/index.html
+++ b/peerassessment/app/templates/professor/index.html
@@ -6,13 +6,19 @@
 {% block button_group %}
 
 <li class="discipline-button">
-    <i class="fa fa-plus"></i>
+    <a href="assignment/create">
+        <i class="fa fa-plus"></i>
+    </a>
 </li>
 <li class="discipline-button">
-    <i class="fa fa-edit"></i>
+    <a href="javascript:;">
+        <i class="fa fa-edit"></i>
+    </a>
 </li>
 <li class="discipline-button">
-    <i class="fa fa-trash-o"></i>
+    <a href="javascript:;">
+        <i class="fa fa-trash-o"></i>
+    </a>
 </li>
 
 {% endblock %}
