--- a/peerassessment/app/static/css/list-assignments-style.css
+++ b/peerassessment/app/static/css/list-assignments-style.css
@@ -12,11 +12,11 @@
     box-shadow: 0px 2px 5px #888888;
 }
 
-.title a {
+.title .pull-left a {
     margin-left: 20px;
     line-height: 50px;
-    color: #fafafa;
     font-size: 22px;
+    color: #fafafa;
 }
 
 
@@ -68,6 +68,10 @@
     padding: 9px 15px;
     border-left: 1px solid rgba(255,255,255,0.1);
     font-size: 22px;
+}
+
+.discipline-button a {
+    color: #fafafa;
 }
 
 .icon-block {
