--- a/peerassessment/app/templates/signup.html
+++ b/peerassessment/app/templates/signup.html
@@ -7,7 +7,7 @@
 
   <meta charset="UTF-8">
 
-  <title>Login - Peer Assessment</title>
+  <title>Sign Up - Peer Assessment</title>
 
     <link rel="stylesheet" href="{% static 'css/index-style.css' %}" media="screen" type="text/css" />
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" media="screen" type="text/css" />
@@ -19,21 +19,25 @@
 
       <form class="form-signin" role="form">
         <div class="bottom-padding"> <h2 class="form-signin-heading">Peer Assessment</h2> </div>
-        <input id="email" type="email" class="form-control textview" placeholder="Email" required="" autofocus="">
-        <input id="password" type="password" class="form-control textview" placeholder="Password" required="">
+
+        <input id="name" type="text" class="form-control textview" placeholder="Nome" required="" autofocus="">
+        <input id="lastname" type="text" class="form-control textview" placeholder="Sobrenome" required="" autofocus="">
+        <input id="email" type="email" class="form-control textview" placeholder="Endereço de email" required="" autofocus="">
+        <input id="password" type="password" class="form-control textview" placeholder="Senha" required="">
+        <input id="confirmPassword" type="password" class="form-control textview" placeholder="Confirme sua senha" required="">
 
         <div>
-            <input  class="btn btn-lg btn-primary btn-block" type="button" onclick="login()" value="Login" />
+            <input  class="btn btn-lg btn-primary btn-block" type="button" onclick="signup()" value="Cadastre-se" />
         </div>
 
-        <div class="checkbox"> Não é cadastrado? <a href="signup/">Registre-se aqui</a>
+        <div class="checkbox"> Já tem conta? <a href="/">Faça login aqui</a>
         </div>
 
         <div class="top-padding">
             <div class="alert alert-danger" style="display: none">
-                <strong>Oh não!</strong>
+                <strong>Oops!</strong>
                 <p id="msg">
-                Senha ou login inválido(s)
+                Erro no seu cadastro!
                 </p>
             </div>
         </div>
@@ -46,7 +50,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{% static 'js/jquery-1.11.1.js' %}"></script>
-    <script src="{% static 'js/index.js' %}"></script>
+    <script src="{% static 'js/signup.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
   
 
