Fixes #31 and #32 - Implemented Edit Assignment page and Endpoint
Added a new endpoint to edit an assignment and its HTML page, based on assignment creation.
Modified the date format and localization of the system to pt-br.

--- a/peerassessment/app/static/css/list-assignments-style.css
+++ b/peerassessment/app/static/css/list-assignments-style.css
@@ -111,3 +111,14 @@
     text-transform: uppercase;
     color: #8D8B8B;
 }
+
+.assignment-settings-group {
+    margin-right: 3px;
+    font-size: 20px;
+}
+
+.assignment-settings-group a {
+    display: block;
+    color: #767676;
+    margin: 2px;
+}
