--- a/peerassessment/app/templates/index.html
+++ b/peerassessment/app/templates/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="{% static 'css/index-style.css' %}" media="screen" type="text/css" />
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" media="screen" type="text/css" />
+    <link rel="icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
 </head>
 
 <body class="bg">
@@ -41,15 +42,14 @@
 
 
     </div> <!-- /container -->
-    
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{% static 'js/jquery-1.11.1.js' %}"></script>
     <script src="{% static 'js/index.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
-  
+
 
 </body>
 </html>
-
